--- a/css.css
+++ b/css.css
@@ -2,38 +2,31 @@ body {
 font-family: 'Arial';
 background-color: lightskyblue;
 padding: 0;
-margin: 0;
-height: 100vh;
-background-repeat: no-repeat;
-background-size: cover;  
-}
+margin: 0; 
+}  
 body::before{
     content: ' ';
     display: block;
     background-image: url('5.jpg');
-    background-size:cover ;
+    background-size: cover ;
     z-index: -1;
     width: 100%;
     height: 100%;
     left: 0;
-top: 0;
-width: 100%;
-height: 100%;
-opacity: 0.3;
-position: fixed;
+    top: 0;
+    opacity: 0.3;
+    position: fixed;
 }
 .header {
     background-color: rgba(0, 0, 128, 0.676);
     padding: 15px;
     height: 250px;
-
 }
 h1{
 text-align: center;
 color: white;
 }
 img {
-    position: left;
     width: 20%;
     min-width: 100px;
     position: absolute;
@@ -43,7 +36,7 @@ img {
    text-align: center;
    margin: 20px 0px;
    display: flex;
-   gap: 20px;
+   gap: 8px;
    justify-content: flex-end;
 
 }
@@ -118,11 +111,30 @@ footer{
     margin: 10px 0px;
 
 }
-
 @media only screen and (max-width: 991px){
     .main{
-
         grid-template-columns: 100%;
         overflow: auto;
+        display: block;
     } 
+    .header {
+        height: 220px;
+    }
+    .nav div{
+        height: 80px;
+        width: 85px;
+    }
+    img{
+        height: 80px;
+    }
+    h1{
+        margin: 50px 0px;
+    }
+    .wakacje{
+        height: 100px;
+    }
+    h2{
+        padding: 10px;
+        text-align: center;
+    }
 }
