--- a/css.css
+++ b/css.css
@@ -1,63 +1,71 @@
 body {
 font-family: 'Arial';
 background-color: lightskyblue;
-padding: 0;
-margin: 0; 
+margin: 0;
+padding: 0; 
 }  
+*{box-sizing: border-box;}
 body::before{
     content: ' ';
     display: block;
-    background-image: url('5.jpg');
+    background-image: url('assets/5.jpg');
     background-size: cover ;
     z-index: -1;
     width: 100%;
     height: 100%;
     left: 0;
     top: 0;
-    opacity: 0.3;
+    opacity: 0.15;
     position: fixed;
 }
 .header {
     background-color: rgba(0, 0, 128, 0.676);
-    padding: 15px;
-    height: 250px;
-}
-h1{
-text-align: center;
-color: white;
+    width: 100%;
+    height: 80px;
+    padding: 10px;
 }
 img {
-    width: 20%;
-    min-width: 100px;
+    width: 12%;
+    min-width: 150px;
     position: absolute;
+    margin: -25px 50px;
+    height: auto;
 }
 .nav{
-   width: 100%;
    text-align: center;
    margin: 20px 0px;
    display: flex;
-   gap: 8px;
    justify-content: flex-end;
-
+}
+ul{
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  background-color: #0a1977ba;
+}
+li{
+    float: left;
+}
+.nav a:hover {
+    background-color: #111;
 }
 .nav div{
     color: white;
-    background-image: url('palmy.jpeg');
-    object-fit: cover;
-    background-size: cover;
     min-width: 13vw;
-    height: 12vw;
-    max-width: 200px;
-    max-height: 150px;
+    margin: 0px 20px;
     display: flex; 
     align-items: center;
     justify-content: center; 
-    border-radius: 20px;
-}
-
+} 
 .nav a {
     text-decoration: none;
     font-weight: 600;
+    display: block;
+    padding: 14px 16px;
+    color: white;
+    text-align: center;
+
 }
 .wakacje {
     display: flex;
@@ -70,18 +78,18 @@ img {
     margin: 15px 0px;
 }
 #w1 {
-    background-image: url('morze.jpg');
+    background-image: url('assets/morze.jpg');
 }
 #w2 {
-    background-image: url('morze2.jpg');
+    background-image: url('assets/morze2.jpg');
 }
 #w3 {
-    background-image: url('x.jpg');
+    background-image: url('assets/x.jpg');
 }
 #w4{
-    background-image: url('main4.jpeg');
+    background-image: url('assets/main4.jpeg');
 }
-.main{
+.container{
     gap: 30px;
     display: grid;
     grid-template-columns: 1fr 1fr;
@@ -89,6 +97,8 @@ img {
     margin: auto;
     min-height: 40vw;
     max-height: 1000px;
+    max-width: 1440px;
+    padding: 0px 20px;
 }
 h2 {
     color: white;
@@ -102,17 +112,22 @@ button{
     padding: 10px;
 
 }
-footer{
+.footer{
+    background-color: rgba(0, 0, 128, 0.676);
+    text-align: center;
+    height: 80px;
+    width: 100%;
+    padding: 15px;
+}
+.footer a{
     color: white;
     text-decoration: none;
-    background-color: rgba(0, 0, 128, 0.676);
-    padding: 20px;
-    text-align: center;
-    margin: 10px 0px;
-
+}
+.footer a:hover{
+    color: lightblue;
 }
 @media only screen and (max-width: 991px){
-    .main{
+    .container{
         grid-template-columns: 100%;
         overflow: auto;
         display: block;
@@ -125,10 +140,8 @@ footer{
         width: 85px;
     }
     img{
-        height: 80px;
-    }
-    h1{
-        margin: 50px 0px;
+        height: 90px;
+        margin: -15px 10px;
     }
     .wakacje{
         height: 100px;
