--- a/main.css
+++ b/main.css
@@ -1,17 +1,15 @@
 body {
-    font-family: 'Arial';  
-    background-color: lightskyblue; 
-    margin: 0;
-    padding: 0; 
-}
-*{
-    box-sizing: border-box;
-}
+font-family: 'Arial';
+background-color: lightskyblue;
+margin: 0;
+padding: 0; 
+}  
+*{box-sizing: border-box;}
 body::before{
     content: ' ';
     display: block;
     background-image: url('assets/5.jpg');
-    background-size:cover ;
+    background-size: cover ;
     z-index: -1;
     width: 100%;
     height: 100%;
@@ -64,54 +62,50 @@ li{
     display: block; 
     width: fit-content;
 }
-.tekst {
-        text-align: center;
+.wakacje {
+    display: flex;
+    padding: 100px;
+    background-repeat: no-repeat;
+    background-size: cover;
+    align-items: center;
+    flex-direction: column;
+    justify-content: center;
+    margin: 15px 0px;
 }
-.oferta{
-        background-image: url('assets/egipt.jpg');
-        display: flex;
-        padding: 100px;
-        background-repeat: no-repeat;
-        background-size: cover;
-        background-position: center;
-        margin: 20px 80px;
-        align-items: center;
-        flex-direction: column;
-        width: 1100px;
-        height: 200px;
-        justify-content: center;
-        
+#w1 {
+    background-image: url('assets/morze.jpg');
+}
+#w2 {
+    background-image: url('assets/morze2.jpg');
+}
+#w3 {
+    background-image: url('assets/x.jpg');
+}
+#w4{
+    background-image: url('assets/main4.jpeg');
 }
 .container{
-        display: grid;
-        justify-content: center;
-        align-items: center;
-        max-width: 1440px;
-        padding: 0px 20px;
-        margin: auto;
+    gap: 30px;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    width: 80%; 
+    margin: auto;
+    min-height: 40vw;
+    max-height: 1000px;
+    max-width: 1440px;
+    padding: 0px 20px;
 }
-#o1{
-        background-image: url('assets/egipt.jpg');
+h2 {
+    color: white;
+    text-decoration: none;
+    background-color: #000000aa;
+    padding: 20px;
 }
-    
-#o2{
-        background-image: url('assets/albania.jpg');
-}
-    
-#o3{
-        background-image: url('assets/grecja.jpg');
-}
-    
-#o4{
-        background-image: url('assets/seszele.jpg');
-}     
-.tekst a {
-        color: white;
-        font-size: 30px;
-        font-weight: 600;
-        text-decoration: none;
-        background-color: #000000aa;
-        padding: 20px;
+button{
+    color: white;
+    background-color: #000000aa;
+    padding: 10px;
+
 }
 .footer{
     background-color: rgba(0, 0, 128, 0.676);
@@ -135,7 +129,11 @@ p{
     color: white;
     margin: 5px 0px;
 }
-@media only screen and (max-width: 620px){  
+
+  @media only screen and (max-width: 620px){  
+    .footer{
+        height: auto;
+    }
     li{
         flex-direction: column;
         float: none;
@@ -184,24 +182,24 @@ p{
         color: white;
     }
   }  
+
 @media only screen and (max-width: 991px){
-    .footer{
-        height: auto;
-    }
-    .header {
-        height: 220px;
-    }
     .container{
         grid-template-columns: 100%;
         display: block;
     } 
-    .oferta{
-        width: 100vw;
-        height: 100px;
-        margin: 30px 0px;         
+    .header {
+        height: 220px;
     }
-    .tekst a{
-        padding: 1px;     
-        font-size: 18px;       
+    img{
+        height: 100px;
+        margin: 0px 50px;
+    }
+    .wakacje{
+        height: 100px;
+    }
+    h2{
+        padding: 10px;
+        text-align: center;
     }
 }
