--- a/oferty.css
+++ b/oferty.css
@@ -185,6 +185,11 @@ p{
     }
   }  
 @media only screen and (max-width: 991px){
+    img{
+        height: 100px;
+        width: auto;
+        margin: 0px 50px;
+    }
     .footer{
         height: auto;
     }
