nagłówek mobilka, menu mobilka, logo mobilka, stopka

--- a/oferty.css
+++ b/oferty.css
@@ -116,14 +116,27 @@ li{
 .footer{
     background-color: rgba(0, 0, 128, 0.676);
     text-align: center;
-    height: 60px;
+    height: 50px;
     width: 100%;
     padding: 15px;
     margin: auto 0 0 0;
 }
+.footer-logo{
+    float: left;
+    margin: -25px 0px;
+    position: absolute;
+    height: 50px;
+}
+.footer-menu{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
 .footer a{
     color: white;
     text-decoration: none;
+    margin: 0px 40px;
+    font-size: small;
 }
 .footer a:hover{
     color: lightblue;
