--- a/main.css
+++ b/main.css
@@ -45,9 +45,6 @@ ul{
   overflow: hidden;
 
 }
-li{
-    float: left;
-}
 .header-menu a:hover {
     background-color: rgba(0, 0, 128, 0.918);
     transition: background-color 2s;   
@@ -105,19 +102,34 @@ button{
     color: white;
     background-color: #000000aa;
     padding: 10px;
-
+}
+button.icon{
+    visibility: hidden;
 }
 .footer{
     background-color: rgba(0, 0, 128, 0.676);
     text-align: center;
-    height: 60px;
+    height: 50px;
     width: 100%;
     padding: 15px;
     margin: auto 0 0 0;
 }
+.footer-logo{
+    float: left;
+    margin: -25px 0px;
+    position: absolute;
+    height: 50px;
+}
+.footer-menu{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
 .footer a{
     color: white;
     text-decoration: none;
+    margin: 0px 40px;
+    font-size: small;
 }
 .footer a:hover{
     color: lightblue;
@@ -131,8 +143,15 @@ p{
 }
 
   @media only screen and (max-width: 620px){  
+    .footer-menu{
+        display: block;
+    }
     .footer{
         height: auto;
+        position: absolute;
+        bottom: 0;
+        left: 0;
+        right: 0;
     }
     li{
         flex-direction: column;
@@ -143,16 +162,29 @@ p{
         margin: auto;
         color: white;
         float: right;
+    }   
+    .header{
+        height: 60px;
     }
-      
     .topnav {
-        background-color: rgba(0, 0, 128, 0.918);
-        position: relative;
+        background-color: rgba(0, 0, 128, 0.676);
+       
     }
     .topnav .header-menu {
+        right: 0;
+        position: absolute;
+        background-color: inherit;
+        margin: 0 0;
+        width: 100vw;
+        left: 0;
+        top: 60px;
         display: none;
     }
-      
+    button.icon{
+        visibility: visible;
+        margin: 5px 0px;
+
+    }
     .topnav a {
         color: white;
         padding: 14px 16px;
@@ -160,27 +192,40 @@ p{
         font-size: 17px;
         display: block;
     }
-      
-    .topnav a.icon {
-        background: black;
-        display: block;
+    .header-icon{
+        height: initial;
+        width: 26px;
         position: absolute;
-        width: 200px; 
+        top: 0;
+        bottom: 0;
+        left: 0;
+        right: 0;
+        z-index: 1;
+        object-fit: cover;
+        width: 100%;
+    }
+    .topnav button.icon {
+        background: rgba(0, 0, 128, 0.918);
+        background-image: url('assets/hamburger.png'); 
+        width: 100%;
+        height: 100%;
+        background-size: cover;
+        background-position: center;
+        background-repeat: no-repeat;
+        display: block;
+        width: 30px; 
         height: 30px;
         padding: 0; 
         text-align: center; 
         line-height: 60px; 
         right: 0;
         top: 0; 
+        bottom: 0;
+        position: relative;
     }   
-    .topnav a:hover {
-        background-color: #ddd;
-        color: black;
+    .topnav button:hover {
+        background-color: lightskyblue;
     }    
-    .active {
-        background-color: rgba(170, 170, 230, 0.674);
-        color: white;
-    }
   }  
 
 @media only screen and (max-width: 991px){
@@ -189,12 +234,12 @@ p{
         display: block;
     } 
     .header {
-        height: 220px;
+        padding: 10px;
     }
     img{
-        height: 100px;
+        height: 90px;
         width: auto;
-        margin: 0px 50px;
+        margin: -20px 0px;
     }
     .wakacje{
         height: 100px;
