--- a/opisy.css
+++ b/opisy.css
@@ -1,23 +1,64 @@
 body {
-    font-family: 'Arial';       
-}   
-body::before{
-    content: ' ';
-    display: block;
-    background-image: url('assets/5.jpg');
-    background-size:cover ;
-    z-index: -1;
-    width: 100%;
-    height: 100%;
-    left: 0;
-    top: 0;
-    opacity: 0.6;
-    position: fixed;
-}
-img{
-    height: auto;
-    width: 100%;
-}
+    font-family: 'Arial';
+    background-color: lightskyblue;
+    margin: 0;
+    padding: 0; 
+    }  
+    *{box-sizing: border-box;}
+    body::before{
+        content: ' ';
+        display: block;
+        background-image: url('assets/5.jpg');
+        background-size: cover ;
+        z-index: -1;
+        width: 100%;
+        height: 100%;
+        left: 0;
+        top: 0;
+        opacity: 0.15;
+        position: fixed;
+    }
+    .header {
+        background-color: rgba(0, 0, 128, 0.676);
+        width: 100%;
+        height: 80px;
+        padding: 10px;
+    }
+    img {
+        width: 100px;
+        min-width: 150px; 
+        position: absolute;  
+        margin: 0px 70px;  
+        height: auto;
+    }
+    .header-menu{
+       margin: 23px -10px;
+       display: flex;
+       justify-content: center;
+       align-items: center;
+    }
+    ul{
+      list-style-type: none;
+      padding: 0;
+      margin: 0;
+      text-align: center;
+      overflow: hidden;
+    
+    }
+    .header-menu a:hover {
+        background-color: rgba(0, 0, 128, 0.918);
+        transition: background-color 2s;   
+    }
+    .header-menu a {
+        text-decoration: none;
+        font-weight: 600;
+        padding: 14px 16px; 
+        color: white;
+        min-width: 13vw;
+        margin: 0px 40px; 
+        display: block; 
+        width: fit-content;
+    }
 .main {
     display: grid;
     grid-template-columns: 50% 50%;
@@ -29,14 +70,7 @@ img{
     grid-template-columns: 50% 50%;
     width: 100%;
     gap: 10px;
-}
-footer{
-    color: white;
-    text-decoration: none;
-    background-color: rgba(0, 0, 128, 0.676);
-    padding: 20px;
-    text-align: center;
-}      
+} 
 .button {
     background-color: rgba(0, 0, 128, 0.514);		
     margin:20px 0px;
@@ -62,6 +96,45 @@ input{
         border: 2px solid rgba(0, 0, 0, 0.315);
         box-sizing: border-box;
         padding: 10px;
+}
+.footer{
+    background-color: rgba(0, 0, 128, 0.676);
+    text-align: center;
+    height: 50px;
+    width: 100%;
+    padding: 15px;
+    margin: auto 0 0 0;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    right: 0;
+}
+.footer-logo{
+    float: left;
+    margin: -25px 0px;
+    position: absolute;
+    height: 50px;
+}
+.footer-menu{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.footer a{
+    color: white;
+    text-decoration: none;
+    margin: 0px 40px;
+    font-size: small;
+}
+.footer a:hover{
+    color: lightblue;
+}
+.mail{
+   margin: 0px 40px;
+}
+p{
+    color: white;
+    margin: 5px 0px;
 }
 @media only screen and (max-width: 991px){
     .main{
