--- a/oferty.css
+++ b/oferty.css
@@ -64,6 +64,9 @@ li{
     display: block; 
     width: fit-content;
 }
+button.icon{
+    visibility: hidden;
+}
 .tekst {
         text-align: center;
 }
@@ -116,9 +119,10 @@ li{
 .footer{
     background-color: rgba(0, 0, 128, 0.676);
     text-align: center;
-    height: 50px;
+    height: 30px;
     width: 100%;
-    padding: 15px;
+    padding: 0px;
+    bottom: 0;
     margin: auto 0 0 0;
 }
 .footer-logo{
@@ -149,6 +153,15 @@ p{
     margin: 5px 0px;
 }
 @media only screen and (max-width: 620px){  
+    .footer-menu{
+        display: block;
+    }
+    .footer{
+        position: absolute;
+        bottom: 0;
+        left: 0;
+        right: 0;
+    }
     li{
         flex-direction: column;
         float: none;
@@ -158,16 +171,29 @@ p{
         margin: auto;
         color: white;
         float: right;
+    }   
+    .header{
+        height: 60px;
     }
-      
     .topnav {
-        background-color: rgba(0, 0, 128, 0.918);
-        position: relative;
+        background-color: rgba(0, 0, 128, 0.676);
+       
     }
     .topnav .header-menu {
+        right: 0;
+        position: absolute;
+        background-color: inherit;
+        margin: 0 0;
+        width: 100vw;
+        left: 0;
+        top: 60px;
         display: none;
     }
-      
+    button.icon{
+        visibility: visible;
+        margin: 5px 0px;
+
+    }
     .topnav a {
         color: white;
         padding: 14px 16px;
@@ -175,39 +201,49 @@ p{
         font-size: 17px;
         display: block;
     }
-      
-    .topnav a.icon {
-        background: black;
-        display: block;
+    .header-icon{
+        height: initial;
+        width: 26px;
         position: absolute;
-        width: 200px; 
+        top: 0;
+        bottom: 0;
+        left: 0;
+        right: 0;
+        z-index: 1;
+        object-fit: cover;
+        width: 100%;
+    }
+    .topnav button.icon {
+        background: rgba(0, 0, 128, 0.918);
+        background-image: url('assets/hamburger.png'); 
+        width: 100%;
+        height: 100%;
+        background-size: cover;
+        background-position: center;
+        background-repeat: no-repeat;
+        display: block;
+        width: 30px; 
         height: 30px;
         padding: 0; 
         text-align: center; 
         line-height: 60px; 
         right: 0;
         top: 0; 
+        bottom: 0;
+        position: relative;
     }   
-    .topnav a:hover {
-        background-color: #ddd;
-        color: black;
+    .topnav button:hover {
+        background-color: lightskyblue;
     }    
-    .active {
-        background-color: rgba(170, 170, 230, 0.674);
-        color: white;
-    }
   }  
 @media only screen and (max-width: 991px){
-    img{
-        height: 100px;
-        width: auto;
-        margin: 0px 50px;
-    }
-    .footer{
-        height: auto;
-    }
     .header {
-        height: 220px;
+        padding: 10px;
+    }
+    img{
+        height: 90px;
+        width: auto;
+        margin: -20px 0px;
     }
     .container{
         grid-template-columns: 100%;
