--- a/main.css
+++ b/main.css
@@ -33,10 +33,10 @@ img {
 }
 .header-menu{
     float: right;
-   margin: 23px -10px;
-   display: flex;
-   justify-content: center;
-   align-items: center;
+    margin: 23px -10px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 ul{
   list-style-type: none;
@@ -69,10 +69,17 @@ ul{
     flex-direction: column;
     justify-content: center;
     margin: 15px 0px;
+    margin-bottom: 0;
 }
 .text{
     text-align: center;
     background-color: rgba(230, 186, 12, 0.765);
+    margin-bottom: 0;
+    margin-top: 0;
+    padding: 0.5px;
+}
+h4{
+    margin: 0;
 }
 #w1 {
     background-image: url('assets/morze.jpg');
@@ -85,6 +92,7 @@ ul{
 }
 #w4{
     background-image: url('assets/main4.jpeg');
+    height: 364.81px;
 }
 .container{
     gap: 30px;
@@ -119,41 +127,13 @@ button.icon{
     bottom: 0;
     margin: auto 0 0 0;
 }
-.footer-logo{
-    float: left;
-    margin: -25px 0px;
-    position: absolute;
-    height: 50px;
-}
-.footer-menu{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-.footer a{
-    color: white;
-    text-decoration: none;
-    margin: 0px 40px;
-    font-size: small;
-}
-.footer a:hover{
-    color: lightblue;
-}
 p{
     color: white;
-    margin: 8px 0px;
+    margin: 10px 0px;
     font-size: 12px;
+    padding: 8px;
 }
   @media only screen and (max-width: 620px){  
-    .footer-menu{
-        display: block;
-    }
-    .footer{
-        position: absolute;
-        bottom: 0;
-        left: 0;
-        right: 0;
-    }
     li{
         flex-direction: column;
         float: none;
