--- a/oferty.css
+++ b/oferty.css
@@ -1,261 +1,238 @@
-body {
-    font-family: 'Arial';  
-    background-color: lightskyblue; 
-    margin: 0;
-    padding: 0; 
-}
-*{
-    box-sizing: border-box;
-}
-body::before{
-    content: ' ';
-    display: block;
-    background-image: url('assets/5.jpg');
-    background-size:cover ;
-    z-index: -1;
-    width: 100%;
-    height: 100%;
-    left: 0;
-    top: 0;
-    opacity: 0.15;
-    position: fixed;
-}
-.header {
-    background-color: rgba(0, 0, 128, 0.676);
-    width: 100%;
-    height: 80px;
-    padding: 10px;
-}
-img {
-    width: 100px;
-    min-width: 150px; 
-    position: absolute;  
-    margin: 0px 70px;  
-    height: auto;
-}
-.header-menu{
-   margin: 23px -10px;
-   display: flex;
-   justify-content: center;
-   align-items: center;
-}
-ul{
-  list-style-type: none;
-  padding: 0;
-  margin: 0;
-  text-align: center;
-  overflow: hidden;
-
-}
-li{
-    float: left;
-}
-.header-menu a:hover {
-    background-color: rgba(0, 0, 128, 0.918);
-    transition: background-color 2s;   
-}
-.header-menu a {
-    text-decoration: none;
-    font-weight: 600;
-    padding: 14px 16px; 
-    color: white;
-    min-width: 13vw;
-    margin: 0px 40px; 
-    display: block; 
-    width: fit-content;
-}
-button.icon{
-    visibility: hidden;
-}
-.tekst {
+    body {
+        font-family: 'Arial';  
+        background-color: lightskyblue; 
+        margin: 0;
+        padding: 0; 
+    }
+    *{
+        box-sizing: border-box;
+    }
+    body::before{
+        content: ' ';
+        display: block;
+        background-image: url('assets/5.jpg');
+        background-size:cover ;
+        z-index: -1;
+        width: 100%;
+        height: 100%;
+        left: 0;
+        top: 0;
+        opacity: 0.15;
+        position: fixed;
+    }
+    .header {
+        background-color: rgba(0, 0, 128, 0.676);
+        width: 100%;
+        height: 80px;
+        padding: 10px;
+    }
+    img {
+        width: auto;
+        position: absolute;  
+        margin: -20px 0px; 
+        height: 90px;
+        float: left;
+    }
+    .header-menu{
+        float: right;
+        margin: 23px -10px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+    ul{
+        list-style-type: none;
+        padding: 0;
+        margin: 0;
         text-align: center;
-}
-.oferta{
+        overflow: hidden;
+
+    }
+    li{
+        float: left;
+    }
+    .header-menu a:hover {
+        background-color: rgba(0, 0, 128, 0.918);
+        transition: background-color 2s;   
+    }
+    .header-menu a {
+        text-decoration: none;
+        font-weight: 600;
+        padding: 14px 16px; 
+        color: white;
+        min-width: 13vw;
+        margin: 0px 40px; 
+        display: block; 
+        width: fit-content;
+    }
+    button.icon{
+        visibility: hidden;
+    }
+    .tekst {
+        text-align: center;
+    }
+    .oferta{
         background-image: url('assets/egipt.jpg');
         display: flex;
         padding: 100px;
         background-repeat: no-repeat;
         background-size: cover;
         background-position: center;
-        margin: 20px 80px;
         align-items: center;
         flex-direction: column;
-        width: 1100px;
+        width: 100%;       
+        margin: 20px 0px;  
         height: 200px;
         justify-content: center;
-        
-}
-.container{
+            
+    }
+    .container{
+        gap: 20px;
         display: grid;
-        justify-content: center;
-        align-items: center;
+        width: 100%; 
+        margin: auto;
+        min-height: 40vw;
         max-width: 1440px;
         padding: 0px 20px;
-        margin: auto;
-}
-#o1{
+    }
+    #o1{
         background-image: url('assets/egipt.jpg');
-}
-    
-#o2{
+    }      
+    #o2{
         background-image: url('assets/albania.jpg');
-}
-    
-#o3{
+    }      
+    #o3{
         background-image: url('assets/grecja.jpg');
-}
-    
-#o4{
+    }       
+    #o4{
         background-image: url('assets/seszele.jpg');
-}     
-.tekst a {
+    }     
+    .tekst a {
         color: white;
         font-size: 30px;
         font-weight: 600;
         text-decoration: none;
         background-color: #000000aa;
         padding: 20px;
-}
-.footer{
-    background-color: rgba(0, 0, 128, 0.676);
-    text-align: center;
-    height: 30px;
-    width: 100%;
-    padding: 0px;
-    bottom: 0;
-    margin: auto 0 0 0;
-}
-.footer-logo{
-    float: left;
-    margin: -25px 0px;
-    position: absolute;
-    height: 50px;
-}
-.footer-menu{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-.footer a{
-    color: white;
-    text-decoration: none;
-    margin: 0px 40px;
-    font-size: small;
-}
-.footer a:hover{
-    color: lightblue;
-}
-.mail{
-   margin: 0px 40px;
-}
-p{
-    color: white;
-    margin: 5px 0px;
-}
-@media only screen and (max-width: 620px){  
-    .footer-menu{
-        display: block;
     }
     .footer{
-        position: absolute;
-        bottom: 0;
-        left: 0;
-        right: 0;
-    }
-    li{
-        flex-direction: column;
-        float: none;
-    }
-    .mobile-container {
-        max-width: 400px;
-        margin: auto;
-        color: white;
-        float: right;
-    }   
-    .header{
-        height: 60px;
-    }
-    .topnav {
         background-color: rgba(0, 0, 128, 0.676);
-       
-    }
-    .topnav .header-menu {
-        right: 0;
-        position: absolute;
-        background-color: inherit;
-        margin: 0 0;
-        width: 100vw;
-        left: 0;
-        top: 60px;
-        display: none;
-    }
-    button.icon{
-        visibility: visible;
-        margin: 5px 0px;
-
-    }
-    .topnav a {
-        color: white;
-        padding: 14px 16px;
-        text-decoration: none;
-        font-size: 17px;
-        display: block;
-    }
-    .header-icon{
-        height: initial;
-        width: 26px;
-        position: absolute;
-        top: 0;
-        bottom: 0;
-        left: 0;
-        right: 0;
-        z-index: 1;
-        object-fit: cover;
-        width: 100%;
-    }
-    .topnav button.icon {
-        background: rgba(0, 0, 128, 0.918);
-        background-image: url('assets/hamburger.png'); 
-        width: 100%;
-        height: 100%;
-        background-size: cover;
-        background-position: center;
-        background-repeat: no-repeat;
-        display: block;
-        width: 30px; 
+        text-align: center;
         height: 30px;
-        padding: 0; 
-        text-align: center; 
-        line-height: 60px; 
-        right: 0;
-        top: 0; 
+        width: 100%;
+        padding: 0px;
         bottom: 0;
-        position: relative;
-    }   
-    .topnav button:hover {
-        background-color: lightskyblue;
-    }    
-  }  
-@media only screen and (max-width: 991px){
-    .header {
-        padding: 10px;
+        margin: auto 0 0 0;
     }
-    img{
-        height: 90px;
-        width: auto;
-        margin: -20px 0px;
+    p{
+        color: white;
+        margin: 10px 0px;
+        font-size: 12px;
+        padding: 8px;
     }
-    .container{
-        grid-template-columns: 100%;
-        display: block;
-    } 
-    .oferta{
-        width: 100vw;
-        height: 100px;
-        margin: 30px 0px;         
+    @media only screen and (max-width: 620px){  
+        li{
+            flex-direction: column;
+            float: none;
+        }
+        .mobile-container {
+            max-width: 400px;
+            margin: auto;
+            color: white;
+            float: right;
+        }   
+        .header{
+            height: 60px;
+        }
+        .topnav {
+            background-color: rgba(0, 0, 128, 0.676);
+        
+        }
+        .topnav .header-menu {
+            right: 0;
+            position: absolute;
+            background-color: inherit;
+            margin: 0 0;
+            width: 100vw;
+            left: 0;
+            top: 60px;
+            display: none;
+        }
+        button.icon{
+            visibility: visible;
+            margin: 5px 0px;
+
+        }
+        .topnav a {
+            color: white;
+            padding: 14px 16px;
+            text-decoration: none;
+            font-size: 17px;
+            display: block;
+        }
+        .header-icon{
+            height: initial;
+            width: 26px;
+            position: absolute;
+            top: 0;
+            bottom: 0;
+            left: 0;
+            right: 0;
+            z-index: 1;
+            object-fit: cover;
+            width: 100%;
+        }
+        .topnav button.icon {
+            background-image: url('assets/hamburger.png'); 
+            width: 100%;
+            height: 100%;
+            background-size: cover;
+            background-position: center;
+            background-repeat: no-repeat;
+            display: block;
+            width: 30px; 
+            height: 30px;
+            padding: 0; 
+            text-align: center; 
+            line-height: 60px; 
+            right: 0;
+            top: 0; 
+            bottom: 0;
+            position: relative;
+            border: tan;
+            background-color: rgba(0, 0, 128, 0.676);
+        }   
+        .topnav button:hover {
+            background-color: lightskyblue;
+        }    
+    }  
+    @media only screen and (max-width: 991px){
+        .footer{
+            position: absolute;
+            bottom: 0;
+            left: 0;
+            right: 0;
+        } 
+        p{
+            color: white;
+            margin: 0px 0px;
+            padding: 8px;
+        }
+        .header {
+            padding: 10px;
+        }
+        img{
+            height: 90px;
+            width: auto;
+            margin: -20px 0px;
+        }
+        .container{
+            grid-template-columns: 100%;
+            display: block;
+        } 
+        .tekst a{
+            padding: 1px;     
+            font-size: 18px;   
+            display: flex;    
+        }
     }
-    .tekst a{
-        padding: 1px;     
-        font-size: 18px;       
-    }
-}
