--- a/opisy.css
+++ b/opisy.css
@@ -25,25 +25,29 @@ body {
         padding: 10px;
     }
     img {
-        width: 100px;
-        min-width: 150px; 
+        width: auto;
         position: absolute;  
-        margin: 0px 70px;  
-        height: auto;
+        margin: -20px 0px; 
+        height: 90px;
+        float: left;
     }
     .header-menu{
-       margin: 23px -10px;
-       display: flex;
-       justify-content: center;
-       align-items: center;
+        float: right;
+        margin: 23px -10px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
     }
     ul{
-      list-style-type: none;
-      padding: 0;
-      margin: 0;
-      text-align: center;
-      overflow: hidden;
-    
+        list-style-type: none;
+        padding: 0;
+        margin: 0;
+        text-align: center;
+        overflow: hidden;
+
+    }
+    li{
+        float: left;
     }
     .header-menu a:hover {
         background-color: rgba(0, 0, 128, 0.918);
@@ -59,83 +63,156 @@ body {
         display: block; 
         width: fit-content;
     }
-.main {
-    display: grid;
-    grid-template-columns: 50% 50%;
-    width: 100%;
-    gap: 10px;
-}  
-.main2{
-    display: grid;
-    grid-template-columns: 50% 50%;
-    width: 100%;
-    gap: 10px;
-} 
-.button {
-    background-color: rgba(0, 0, 128, 0.514);		
-    margin:20px 0px;
-    padding:4px 7px;	
-    border:1px;
-    width:100px;
-    color: white;
-}
-textarea{
-    resize: vertical;
-    width: 100%;
-    margin: 10px 0px;    
-    border-radius: 5px;
-    border: 2px solid rgba(0, 0, 0, 0.315);
-    box-sizing: border-box;
-    padding: 10px;
-    font: inherit;
-}
-input{
+    button.icon{
+        visibility: hidden;
+    }
+    .main {
+        margin-top: 50px;
+        display: grid;
+        grid-template-columns: 50% 50%;
         width: 100%;
-        margin: 10px 0px;       
+        gap: 10px;
+    } 
+    .main-text{
+        color: black;
+    } 
+    .main-img{
+        height: auto;
+        width: 300px;
+        margin-bottom: 50px;
+    }
+    .main-dwa{
+        display: grid;
+        margin-top: 100px;
+        grid-template-columns: 50% 50%;
+        width: 100%;
+    }
+    .main2{
+        display: grid;
+        grid-template-columns: 50% 50%;
+        width: 100%;
+        gap: 10px;
+    } 
+    .button {
+        background-color: rgba(0, 0, 128, 0.514);		
+        margin:20px 0px;
+        padding:4px 7px;	
+        border:1px;
+        width:100px;
+        color: white;
+    }
+    textarea{
+        resize: vertical;
+        width: 100%;
+        margin: 10px 0px;    
         border-radius: 5px;
         border: 2px solid rgba(0, 0, 0, 0.315);
         box-sizing: border-box;
         padding: 10px;
-}
-.footer{
-    background-color: rgba(0, 0, 128, 0.676);
-    text-align: center;
-    height: 50px;
-    width: 100%;
-    padding: 15px;
-    margin: auto 0 0 0;
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    right: 0;
-}
-.footer-logo{
-    float: left;
-    margin: -25px 0px;
-    position: absolute;
-    height: 50px;
-}
-.footer-menu{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-.footer a{
-    color: white;
-    text-decoration: none;
-    margin: 0px 40px;
-    font-size: small;
-}
-.footer a:hover{
-    color: lightblue;
-}
-.mail{
-   margin: 0px 40px;
-}
-p{
-    color: white;
-    margin: 5px 0px;
-}
+        font: inherit;
+    }
+    input{
+            width: 100%;
+            margin: 10px 0px;       
+            border-radius: 5px;
+            border: 2px solid rgba(0, 0, 0, 0.315);
+            box-sizing: border-box;
+            padding: 10px;
+    }
+    .footer{
+        background-color: rgba(0, 0, 128, 0.676);
+        text-align: center;
+        height: 30px;
+        width: 100%;
+        padding: 15px;
+        margin: auto 0 0 0;
+        position: absolute;
+        bottom: 0;
+        left: 0;
+        right: 0;
+    }
+    p{
+        color: white;
+        margin: -13px 0px;
+        font-size: 12px;
+        padding: 8px;
+    }
+
+    @media only screen and (max-width: 620px){  
+        li{
+            flex-direction: column;
+            float: none;
+        }
+        .mobile-container {
+            max-width: 400px;
+            margin: auto;
+            color: white;
+            float: right;
+        }   
+        .header{
+            height: 60px;
+        }
+        .topnav {
+            background-color: rgba(0, 0, 128, 0.676);      
+        }
+        .topnav .header-menu {   
+            right: 0;
+            position: absolute;
+            background-color: inherit;
+            margin: 0 0;
+            width: 100vw;
+            left: 0;
+            top: 60px;
+            display: none;
+        }
+        button.icon{
+            visibility: visible;
+            margin: 5px 0px;
+    
+        }
+        .topnav a {
+            color: white;
+            padding: 14px 16px;
+            text-decoration: none;
+            font-size: 17px;
+            display: block;
+        }
+        .header-icon{
+            height: initial;
+            width: 26px;
+            position: absolute;
+            top: 0;
+            bottom: 0;
+            left: 0;
+            right: 0;
+            z-index: 1;
+            object-fit: cover;
+            width: 100%;
+        }
+        .topnav button.icon {
+            background-image: url('assets/hamburger.png'); 
+            width: 100%;
+            height: 100%;
+            background-size: cover;
+            background-position: center;
+            background-repeat: no-repeat;
+            display: block;
+            width: 30px; 
+            height: 30px;
+            padding: 0; 
+            text-align: center; 
+            line-height: 60px; 
+            right: 0;
+            top: 0; 
+            bottom: 0;
+            position: relative;
+            border: tan;
+            background-color: rgba(0, 0, 128, 0.676);
+        }   
+        .topnav button:hover {
+            background-color: lightskyblue;
+        }    
+      }  
 @media only screen and (max-width: 991px){
     .main{
     overflow: auto;
@@ -147,7 +224,9 @@ p{
     margin: 20px 0px;
     } 
     img{
-        width: 150vw;
+        height: 90px;
+        width: auto;
+        margin: -20px 0px;
     }
     .button{
         height: 50px;
