--- a/css/index.css
+++ b/css/index.css
@@ -59,15 +59,15 @@ button.icon{
     background-color: rgba(0, 0, 128, 0.676);
     text-align: center;
     width: 100%;
-    padding: 0px;
-    bottom: 0;
+    padding: 8px;
     margin: auto 0 0 0;
+    margin-top: 20px;
 }
 p{
     color: white;
-    margin: 10px 0px;
     font-size: 12px;
-    padding: 8px;
+    margin: 0;
+    padding: 0;
 }
   @media only screen and (max-width: 620px){  
     li{
