--- a/css/kontakt.css
+++ b/css/kontakt.css
@@ -53,8 +53,8 @@
         padding:10px 10px;	
         border-radius: 5px;
         width:100px;
-        font-weight: 600;
         color: white;
+        font-size: 13px;
     }
     .container a:hover{
         color: rgb(228, 185, 12);
@@ -64,16 +64,15 @@
         background-color: rgba(0, 0, 128, 0.676);
         text-align: center;
         width: 100%;
+        padding: 8px;
         margin: auto 0 0 0;
-        position: absolute;
-        bottom: 0;
-        left: 0;
-        right: 0;
     }
     p{
         color: white;
         font-size: 12px;
-    }  
+        margin: 0;
+        padding: 0;
+    }
     @media only screen and (max-width: 620px){  
     li{
         flex-direction: column;
