--- a/css/logowanie.css
+++ b/css/logowanie.css
@@ -22,6 +22,11 @@
         padding: 7px;
 
     }    
+    .container{
+        margin: 0 auto;
+        max-width: 1440px;
+        padding: 0px 20px;
+    }
     .button {
         background-color: rgba(0, 0, 128, 0.514);		
         margin:10px 0px;
@@ -46,16 +51,15 @@
         background-color: rgba(0, 0, 128, 0.676);
         text-align: center;
         width: 100%;
+        padding: 8px;
         margin: auto 0 0 0;
-        position: absolute;
-        bottom: 0;
-        left: 0;
-        right: 0;
     }
     p{
         color: white;
         font-size: 12px;
-    }  
+        margin: 0;
+        padding: 0;
+    }
     @media only screen and (max-width: 620px){  
     li{
         flex-direction: column;
