--- a/css/rejestracja.css
+++ b/css/rejestracja.css
@@ -34,21 +34,20 @@
         border: 2px solid rgba(0, 0, 0, 0.315);
         box-sizing: border-box;
         padding: 10px;
-    }
+    } 
     .footer{
         background-color: rgba(0, 0, 128, 0.676);
         text-align: center;
         width: 100%;
+        padding: 8px;
         margin: auto 0 0 0;
-        position: absolute;
-        bottom: 0;
-        left: 0;
-        right: 0;
     }
     p{
         color: white;
         font-size: 12px;
-    }  
+        margin: 0;
+        padding: 0;
+    }
     @media only screen and (max-width: 620px){  
         li{
         flex-direction: column;
