--- a/css/index.css
+++ b/css/index.css
@@ -54,6 +54,9 @@ h2 {
     padding: 20px;
     
 }
+a{
+    text-decoration: none;
+}
 button{
     color: white; 
     background-color: rgba(0, 15, 88, 0.904);
@@ -64,13 +67,12 @@ button{
     appearance: none;
     border:none;
     cursor:pointer;
-    opacity: 0;
+    /* opacity: 0; */
     transition: opacity 0.3s;
-
 }
 .wrap:hover button{
-    box-shadow: 2px 2px 5px -2px black;
-    opacity:1;
+    box-shadow: 2px 2px 6px -1px black;
+    /* opacity:1; */
 }
 button.icon{
     visibility: hidden;
