stopka i porządki w kodzie

--- a/webpack/src/scss/blocks/_text-media.scss
+++ b/webpack/src/scss/blocks/_text-media.scss
@@ -47,7 +47,7 @@ h4{
     max-width: 1440px;
     padding: 0px 20px;
 }
-h2 {
+.wrap-h2 {
     color: white;
     text-decoration: none;
     background-color: #000000aa;
@@ -152,7 +152,7 @@ button{
         height: 250px;
         padding: 0;
     }
-    h2{
+    .wrap-h2{
         padding: 10px;
         text-align: center;
     }
