podstrony, style, kod porządek i scss

--- a/css/oferty.css
+++ b/css/oferty.css
@@ -1,4 +1,10 @@
     
+    .menu-color{
+        background-color: rgba(0, 0, 128, 0.918);
+        border-radius: 5px;
+        color: rgb(230, 186, 12);
+        transition: background-color 2s, color 2s;
+    }
     button.icon{
         visibility: hidden;
     }
