--- a/webpack/src/html/partials/header.html
+++ b/webpack/src/html/partials/header.html
@@ -4,15 +4,15 @@
     </div>   
     <div class="mobile-container">
         <div class="topnav">
-            <ul class="header-menu">
+            <ul class="topnav-menu">
                 <li>
-                    <a href="./oferty.html">Oferty</a>
+                    <a href="./oferty.html" >Oferty</a>
                 </li>
                 <li>
                     <a href="./kontakt.html">Kontakt</a>
                 </li>
                 <li>
-                    <a href="/">Zaloguj się</a>
+                    <a href="../logowanie.html">Zaloguj się</a>
                 </li>
             </ul>
             <button href="javascript:void(0);"  class="icon" onclick="myFunction()">
