--- a/webpack/src/scss/app.scss
+++ b/webpack/src/scss/app.scss
@@ -15,6 +15,8 @@ $mobile: 435; // Break point dla mobilki
 @import "layout/header";
 @import "layout/oferty";
 @import "layout/kontakt";
+@import "layout/opis";
+@import "layout/logowanie";
 
 //Components - przyciski, okładki, widgety itd.
 @import "components/hamburger";
