--- a/webpack/src/scss/layout/_footer.scss
+++ b/webpack/src/scss/layout/_footer.scss
@@ -4,10 +4,10 @@
     width: 100%;
     padding: 10px;
     margin: auto 0 0 0;
-}
-.footer-copyrights{
-    color: white;
-    font-size: 12px;
-    margin: 0px;
-    padding: 0px;
+    &-copyrights{
+        color: white;
+        font-size: 12px;
+        margin: 0px;
+        padding: 0px;
+    }
 }
