--- a/webpack/src/scss/layout/_header.scss
+++ b/webpack/src/scss/layout/_header.scss
@@ -3,18 +3,18 @@
     width: 100%;
     height: 80px;
     padding: 10px;
-}
-.header-logo{
-    width: auto;
-    position: absolute;  
-    margin: -20px 0px; 
-    height: 90px;
-    float: left;
+    &-logo{
+        width: auto;
+        position: absolute;  
+        margin: -20px 0px; 
+        height: 90px;
+        float: left;
+    }
 }
 button.icon{
     visibility: hidden;
 }
-.header-menu{
+.topnav-menu{
     float: right;
     margin: 23px -10px;
     display: flex;
@@ -23,20 +23,82 @@ button.icon{
     list-style-type: none;
     text-align: center;
     overflow: hidden;
+    a {
+        text-decoration: none;
+        font-weight: 600;
+        padding: 14px 16px; 
+        color: white;
+        min-width: 13vw;
+        margin: 0px 20px; 
+        display: block; 
+        width: fit-content;
+    }
+    a:hover {
+        background-color: rgba(0, 0, 128, 0.918);
+        border-radius: 5px;
+        color: rgba(230, 186, 12, 0.765);
+        transition: background-color 2s;   
+    }
 }
-.header-menu a:hover {
-    background-color: rgba(0, 0, 128, 0.918);
-    border-radius: 5px;
-    color: rgba(230, 186, 12, 0.765);
-    transition: background-color 2s;   
-}
-.header-menu a {
-    text-decoration: none;
-    font-weight: 600;
-    padding: 14px 16px; 
-    color: white;
-    min-width: 13vw;
-    margin: 0px 20px; 
-    display: block; 
-    width: fit-content;
-}
+@media only screen and (max-width: 620px){  
+
+    .mobile-container {
+        max-width: 400px;
+        margin: auto;
+        color: white;
+        float: right;
+        button.icon{
+            visibility: visible;
+            margin: 5px 0px;
+    
+        }
+        li{
+            flex-direction: column;
+            float: none;
+        }
+    }   
+    .header{
+        height: 60px;
+    }
+    .topnav {
+        background-color: rgba(0, 0, 128, 0.676);  
+        &-menu {   
+            right: 0;
+            position: absolute;
+            background-color: inherit;
+            margin: 0 0;
+            width: 100vw;
+            left: 0;
+            top: 60px;
+            display: none;
+        }
+        a {
+            color: white;
+            padding: 14px 16px;
+            text-decoration: none;
+            font-size: 17px;
+            display: block;
+        }
+        button.icon {
+            background-image: url('../assets/img/hamburger.png'); 
+            background-size: cover;
+            background-position: center;
+            background-repeat: no-repeat;
+            display: block;
+            width: 30px; 
+            height: 30px;
+            padding: 0; 
+            text-align: center; 
+            line-height: 60px; 
+            right: 0;
+            top: 0; 
+            bottom: 0;
+            position: relative;
+            border: tan;
+            background-color: rgba(0, 0, 128, 0.676);
+        }   
+        button:hover {
+            background-color: lightskyblue;
+        }    
+    }
+  } 
