--- a/webpack/src/scss/layout/_oferty.scss
+++ b/webpack/src/scss/layout/_oferty.scss
@@ -1,13 +1,4 @@
-    
-    button.icon{
-        visibility: hidden;
-    }
-    .tekst {
-        text-align: center;
-    }
-    a{
-        text-decoration: none;
-    }
+
     .oferta{
         background-image: url('../assets/img/egipt.jpg');
         display: flex;
@@ -22,6 +13,26 @@
         height: 200px;
         justify-content: center;
         box-shadow: 6px 6px 10px black;
+        &-color{
+            background-color: rgba(0, 0, 128, 0.918);
+            border-radius: 5px;
+            color: rgb(230, 186, 12);
+            transition: background-color 2s, color 2s;
+        }
+        a{
+            text-decoration: none;
+        }
+        .tekst {
+            text-align: center;
+        }
+        h2 {
+            color: white;
+            font-size: 30px;
+            font-weight: 600;
+            text-decoration: none;
+            background-color: #000000aa;
+            padding: 20px;
+        }
             
     }
     .container-oferty{
@@ -33,12 +44,16 @@
         min-height: 40vw;
         max-width: 1440px;
         padding: 0px 20px;
-    }
-    .container-oferty a:hover {
-        background-color: rgba(230, 186, 12, 0.708);
-        box-shadow: 5px 5px 10px 8px rgba(230, 186, 12, 0.568);
-        transition: background-color 1s; 
-        border-radius: 5px;  
+        a{
+            transition-property: background-color, box-shadow;
+            transition: background-color 0.4s, box-shadow 0.4s;
+            text-decoration: none;
+        }       
+        a:hover {
+            background-color: rgba(230, 186, 12, 0.708);
+            box-shadow: 5px 5px 10px 8px rgba(230, 186, 12, 0.568);
+            border-radius: 5px;  
+        }
     }
     #o1{
         background-image: url('../assets/img/egipt.jpg');
@@ -52,26 +67,18 @@
     #o4{
         background-image: url('../assets/img/seszele.jpg');
     }     
-    .oferty-h2 {
-        color: white;
-        font-size: 30px;
-        font-weight: 600;
-        text-decoration: none;
-        background-color: #000000aa;
-        padding: 20px;
-    }
     @media only screen and (max-width: 991px){
         .oferta{
             padding: 0;
+            h2{
+                padding: 1px;     
+                font-size: 18px;   
+                display: flex;    
+            }
         }
         .container-oferty{
             grid-template-columns: 100%;
             display: block;
             padding: 0px 16px;
         } 
-        .oferty-h2{
-            padding: 1px;     
-            font-size: 18px;   
-            display: flex;    
-        }
     }
