--- a/webpack/src/scss/blocks/_text-media.scss
+++ b/webpack/src/scss/blocks/_text-media.scss
@@ -1,5 +1,4 @@
 
-
 #w1 {
     background-image: url('../assets/img/morze.jpg');
 }
@@ -26,7 +25,7 @@
     }
 }
 .wrap{
-    margin-bottom: 10px;   
+    margin-bottom: 20px;   
     .block {
         display: flex;
         padding: 100px;
@@ -36,12 +35,12 @@
         flex-direction: column;
         justify-content: center;
         margin: 15px 0px;
-        margin-bottom: 0;
+        margin-bottom: 0;      
         button{
             color: white; 
             background-color: #000f58e1;
             border-radius: 10px;
-            padding: 10px;
+            padding: 15px;
             -moz-appearance: none;
             -webkit-appearance: none;
             appearance: none;
@@ -54,7 +53,7 @@
     h2 {
         color: white;
         text-decoration: none;
-        background-color: #000000aa;
+        background-color: rgb(0 0 0 / 88%);
         padding: 25px;
         font-size: 20px;
         font-weight: 600;
@@ -85,17 +84,18 @@
     .container{
         grid-template-columns: 100%;
         width: 100%;
-    } 
-    .block{
-        height: 250px;
-        button{
-            width: 150px;
+        .wrap{
+            .block{
+                height: 250px;
+                button{
+                    width: 150px;
+                    padding: 10px;
+                }
+            }
+            h2{
+                padding: 20px;
+                text-align: center;
+            }      
         }
-    }
-    .wrap{
-        h2{
-            padding: 20px;
-            text-align: center;
-        }      
-    }
+    }   
 }
