--- a/webpack/src/scss/layout/_kontakt.scss
+++ b/webpack/src/scss/layout/_kontakt.scss
@@ -2,16 +2,18 @@
 .contact{
     background-color: rgba(0, 0, 128, 0.377);
     width: 450px;
-    height: 410px;
-    padding: 15px;    
+    height: 490px;
+    padding: 20px;    
     color: rgb(228, 185, 12);
     border-radius: 8px;
-    margin: 15px auto 80px auto;
+    margin: 30px auto 80px auto;
     align-items: center;    
     h2{
         text-align: center;
         font-weight: 600;
         margin-bottom: 10px;
+        margin-top: 10px;
+        font-size: 20px;
     }  
     label{
         width:100%;
@@ -43,7 +45,7 @@
         border: 2px solid rgba(0, 0, 0, 0.315);
         box-sizing: border-box;
         padding: 10px;
-        margin-bottom: 30px;
+        margin-bottom: 20px;
     }
 }
 .container-kontakt{
@@ -51,12 +53,15 @@
         background-color: rgba(0, 0, 128, 0.767);	
         text-decoration: none;	
         margin:20px 0px;
-        margin-top: 20px;
+        margin-top: 0px;
         padding:10px 10px;	
-        border-radius: 5px;
+        border-radius: 10px;
         width:100px;
         color: white;
-        font-size: 13px;       
+        font-size: 13px;     
+        width: 100%;
+        justify-content: center;
+        display: flex;  
     }
     a:hover{
         color: rgb(228, 185, 12);  
@@ -64,22 +69,23 @@
    
 }
 @media only screen and (max-width: 991px){
-    .contact{
-        max-width: 350px;
-        width: 100%;       
-    }
     .container-kontakt{
         max-width: 1200px;
         padding: 0px 20px;
-    }
-    img{
-        height: 90px;
-        width: auto;
-        margin: -20px 0px;
-    }
-    .button{
-        width: 70px;
-        height: 45px;
-        margin: 10px 0px;;
+        a{
+            margin: 10px 0px;
+            margin-top: 0;
+        }
+        .contact{
+            max-width: 450px;
+            width: 100%;  
+            height: 470px;
+            select{
+                margin: 10px 0px 20px;
+            }
+            h2{
+                margin: 0;
+            }     
+        }
     }
 }
