poprawa formularzy, dodanie rejestracji i zmiany hasła

--- a/webpack/src/html/partials/logowanie.html
+++ b/webpack/src/html/partials/logowanie.html
@@ -7,7 +7,7 @@
         <div class="lower">
         <a href="#">Zaloguj</a>
         </div>
-        <a href="#" class="ps">Zapomniałeś hasła?</a>
-        <a href="#">Nie masz konta?</a>
+        <a href="./zmiana_hasla.html" class="ps">Zapomniałeś hasła?</a>
+        <a href="./rejestracja.html">Nie masz konta?</a>
     </form>
 </div>
