--- a/webpack/src/scss/app.scss
+++ b/webpack/src/scss/app.scss
@@ -17,6 +17,8 @@ $mobile: 435; // Break point dla mobilki
 @import "layout/kontakt";
 @import "layout/opis";
 @import "layout/logowanie";
+@import "layout/zmiana_hasla";
+@import "layout/rejestracja";
 
 //Components - przyciski, okładki, widgety itd.
 @import "components/hamburger";
