--- a/webpack/src/scss/layout/_kontakt.scss
+++ b/webpack/src/scss/layout/_kontakt.scss
@@ -25,7 +25,7 @@
         width: 100%;
         margin: 10px 0px;    
         border-radius: 5px;
-        border: 2px solid rgba(0, 0, 0, 0.315);
+        border: 2px solid rgb(173 140 26 / 85%);
         box-sizing: border-box;
         padding: 10px;
         font: inherit;
@@ -34,7 +34,7 @@
         width: 100%;
         margin: 10px 0px;       
         border-radius: 5px;
-        border: 2px solid rgba(0, 0, 0, 0.315);
+        border: 2px solid rgb(173 140 26 / 85%);
         box-sizing: border-box;
         padding: 10px;
     }
@@ -42,7 +42,7 @@
         width: 100%;
         border-radius: 5px;
         margin: 10px 0px;
-        border: 2px solid rgba(0, 0, 0, 0.315);
+        border: 2px solid rgb(173 140 26 / 85%);
         box-sizing: border-box;
         padding: 10px;
         margin-bottom: 20px;
@@ -58,7 +58,8 @@
         border-radius: 10px;
         width:100px;
         color: white;
-        font-size: 13px;     
+        font-size: 13px;  
+        font-weight: 600;   
         width: 100%;
         justify-content: center;
         display: flex;  
