--- a/webpack/src/scss/layout/_rejestracja.scss
+++ b/webpack/src/scss/layout/_rejestracja.scss
@@ -1,11 +1,11 @@
 
 
-.login{
+.account{
     background-color: rgba(0, 0, 128, 0.377); 
     padding: 20px;  
     border-radius: 8px;
-    margin: 30px auto 80px auto;
-    max-width: 450px;
+    margin: 30px auto 80px auto; 
+    width: 430px;
     height: 300px;
     label{	   
         display: flex;	
@@ -20,33 +20,22 @@
     }
 }  
 
-.container-login{
+.container-account{
     padding: 0px 30px;
     margin: 0 auto;
-    .ps{
-        margin-right: 88px;
-    }
-    a{
-        text-decoration: none;
-        color: white;
-        font-weight: 700;
-        padding: 7px;
-        margin-right: 0;
-    }
-    a:hover{
-        color: rgb(228, 185, 12);  
-    }
+    max-width: 500px;  
     .lower{
         a{ 
             background-color: rgba(0, 0, 128, 0.767);	
             text-decoration: none;	
             margin:20px 0px;
-            margin-top: 10px;
-            margin-bottom: 30px;
+            margin-top: 20px;
+            margin-bottom: 20px;
             padding:10px 10px;	
             border-radius: 8px;          
             color: white;
             font-size: 13px; 
+            font-weight: 600;
             display: block;
             text-align: center; 
             width: 100%;   
@@ -65,16 +54,11 @@ input{
     padding: 10px;
 }
 @media only screen and (max-width: 500px){ 
-    .container-login{
-        .lower{
-            a{
-                margin: 10px 0px 10px;
-            }
-        }
-        a{
-            display: grid;
-            width: 100%;
-        }
+    .container-account{
+        margin: 0;
     }
-
+    .account{
+        width: 100%;
+        max-width: 500px;
+    }
 }
